[gd_scene load_steps=13 format=3 uid="uid://lwe6nmhjudq8"]

[ext_resource type="Script" uid="uid://b41rdea060clm" path="res://scripts/HUD/Options.gd" id="1_4361s"]
[ext_resource type="Theme" uid="uid://unuynfnhkuni" path="res://themes/label.tres" id="2_08ac3"]
[ext_resource type="Script" uid="uid://cddqwbqvinohh" path="res://scripts/Sound/ChangeSound.gd" id="3_5y88e"]
[ext_resource type="Theme" uid="uid://btc3kqb6qx6k3" path="res://themes/button.tres" id="4_i53dp"]
[ext_resource type="AudioStream" uid="uid://hqasyg3vanal" path="res://sounds/SFX/Player/ShootEffect.wav" id="5_op44w"]
[ext_resource type="AudioStream" uid="uid://c14cj6uhjlgdt" path="res://sounds/BGM/Synthwave Game Vlog [No Copyright Music]  San Juniper.wav" id="6_m25jj"]
[ext_resource type="Script" uid="uid://dpdar5kvr5yt7" path="res://scripts/HUD/WindowType.gd" id="7_01fni"]
[ext_resource type="Script" uid="uid://dbv1tqrjpxamu" path="res://scripts/HUD/ResolutionControl.gd" id="8_0olrr"]
[ext_resource type="Script" uid="uid://bfmtutorpwl15" path="res://scripts/Sliders/mouse_sensibility.gd" id="10_ymm1f"]
[ext_resource type="FontFile" uid="uid://b6b3cu5hbka6f" path="res://fonts/Hey Comic.otf" id="11_c75qs"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_eu5c7"]

[sub_resource type="LabelSettings" id="LabelSettings_nhucs"]
font_size = 50

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4361s")

[node name="Opções" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Opções"]
modulate = Color(0.741176, 0.741176, 0.415686, 1)
self_modulate = Color(0.764706, 0.694118, 0.290196, 1)
material = SubResource("CanvasItemMaterial_eu5c7")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasModulate" type="CanvasModulate" parent="Opções/Panel"]
position = Vector2(-418, -377)
color = Color(0.184314, 0.666667, 0.705882, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Opções/Panel/CanvasModulate"]
offset_left = 846.0
offset_top = 601.0
offset_right = 1146.0
offset_bottom = 721.0

[node name="SFX" type="Label" parent="Opções/Panel/CanvasModulate/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_08ac3")
text = "SFX
"
horizontal_alignment = 1

[node name="SFX - Slider" type="HSlider" parent="Opções/Panel/CanvasModulate/VBoxContainer"]
layout_direction = 2
layout_mode = 2
max_value = 1.0
step = 0.001
script = ExtResource("3_5y88e")
bus_name = "SFX"

[node name="BGM" type="Label" parent="Opções/Panel/CanvasModulate/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_08ac3")
text = "BGM"
horizontal_alignment = 1

[node name="BGM - Slider" type="HSlider" parent="Opções/Panel/CanvasModulate/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001
script = ExtResource("3_5y88e")
bus_name = "BGM"

[node name="Options" type="Label" parent="Opções/Panel/CanvasModulate"]
offset_left = 906.0
offset_top = 485.0
offset_right = 1097.0
offset_bottom = 557.0
theme = ExtResource("2_08ac3")
theme_override_font_sizes/font_size = 150
text = "Opções"
label_settings = SubResource("LabelSettings_nhucs")

[node name="Button" type="Button" parent="Opções/Panel"]
layout_mode = 2
offset_left = 44.0
offset_top = 581.0
offset_right = 344.0
offset_bottom = 612.0
theme = ExtResource("4_i53dp")
text = "Voltar"

[node name="Button2" type="Button" parent="Opções/Panel"]
layout_mode = 0
offset_left = 859.0
offset_top = 581.0
offset_right = 1109.0
offset_bottom = 612.0
theme = ExtResource("4_i53dp")
text = "Jogar"

[node name="Button3" type="Button" parent="Opções/Panel"]
layout_mode = 0
offset_left = 769.0
offset_top = 265.0
offset_right = 857.0
offset_bottom = 296.0
theme = ExtResource("4_i53dp")
text = "Testar SFX"

[node name="Shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_op44w")
bus = &"SFX"

[node name="MainBGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_m25jj")
volume_db = -20.0
bus = &"BGM"

[node name="TypeScreenControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("7_01fni")

[node name="HBoxContainer" type="HBoxContainer" parent="TypeScreenControl"]
layout_mode = 0
offset_left = 444.0
offset_top = 433.0
offset_right = 631.0
offset_bottom = 473.0

[node name="Label" type="Label" parent="TypeScreenControl/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_08ac3")
text = "Tipo de Tela"

[node name="VSeparator" type="VSeparator" parent="TypeScreenControl/HBoxContainer"]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="TypeScreenControl/HBoxContainer"]
layout_mode = 2

[node name="ResolutionControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("8_0olrr")

[node name="HBoxContainer" type="HBoxContainer" parent="ResolutionControl"]
layout_mode = 0
offset_left = 464.0
offset_top = 484.0
offset_right = 631.0
offset_bottom = 524.0

[node name="Label" type="Label" parent="ResolutionControl/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_08ac3")
text = "Resolução"

[node name="VSeparator" type="VSeparator" parent="ResolutionControl/HBoxContainer"]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="ResolutionControl/HBoxContainer"]
layout_mode = 2

[node name="MouseSensibilityControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 3.0
offset_top = 12.0
offset_right = 43.0
offset_bottom = 52.0

[node name="MouseSensibilitySlider" type="HSlider" parent="MouseSensibilityControl"]
process_mode = 3
layout_mode = 0
offset_left = 426.0
offset_top = 378.0
offset_right = 726.0
offset_bottom = 394.0
max_value = 4.0
step = 0.1
value = 1.0
script = ExtResource("10_ymm1f")

[node name="Label" type="Label" parent="MouseSensibilityControl"]
layout_mode = 0
offset_left = 419.0
offset_top = 330.0
offset_right = 736.0
offset_bottom = 370.0
theme_override_fonts/font = ExtResource("11_c75qs")
theme_override_font_sizes/font_size = 30
text = "Sensibilidade do Mouse"

[connection signal="pressed" from="Opções/Panel/Button" to="." method="_on_voltar_pressed"]
[connection signal="pressed" from="Opções/Panel/Button2" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Opções/Panel/Button3" to="." method="_on_playsound_pressed"]
[connection signal="changed" from="MouseSensibilityControl/MouseSensibilitySlider" to="MouseSensibilityControl/MouseSensibilitySlider" method="_on_changed"]
